# proyecto-brujula

./: .gitignore  Brújula_Incremento_v0.4_Informe_de_Vida.txt  RFC-0009_Informe_de_Vida_v0.6_Presentacion_Visual_y_LifeSummary.txt
brujula_engine_v3/: LOCAL_RUN.md  README.md  pyproject.toml  start_local.bat  start_local.ps1
brujula_engine_v3/brujula_engine/entities/: models.py
brujula_engine_v3/brujula_engine/llm/: ollama_client.py
brujula_engine_v3/brujula_engine/presentation/: life_report.py
brujula_engine_v3/brujula_engine/rules/: scoring.py
brujula_engine_v3/brujula_engine/simulation/: engine.py  journey_goal.py  journey_hybrid.py  journey_personalization.py  life_profile.py  loader.py  ollama_report.py  run.py  text_scenario.py  web_api.py
brujula_engine_v3/data/scenarios/: brujula_startup.json  pastry_business.json  stay_in_tech.json
brujula_engine_v3/docs/: 00_promesa.md  01_notas_v1.md
brujula_engine_v3/tests/: test_brujula_engine.py
brujula_engine_v3/ui/: package-lock.json  package.json
brujula_engine_v3/ui/app/: globals.css  layout.tsx  page.tsx
brujula_engine_v3/ui/app/api/simulate/: route.ts
brujula_engine_v3/ui/lib/: garden.ts  types.ts
requerimientos/: PRD-0001_Brujula_v0.8_Jardin_y_Viaje.txt  PROP-0001_Diseno_Tecnico_Brujula_v0.8_Jardin_y_Viaje.md  RFC-0010_Perfil_de_Vida_v0.7_Formulario_Parametros_Simulacion.txt  RFC-0011_Rediseno_Respuesta_Modo_Viaje_v0.9.md  RFC-0012_Motor_Destinos_Especializados_v0.10.md  RFC-0013_Motor_Hibrido_IA_v0.11.md  RFC-0014_v0.12_Motor_Simulacion.md  diseño.md  (+2 more)
(+14 files in other folders)
